# flai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE-ru  README-ru.md  README.md  babel.cfg  deploy-ru.sh  deploy.sh  docker-compose.all.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  gunicorn_config.py  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
.github/workflows/: ci.yml  tests.yml
app/: __init__.py  auth.py  cameradb.py  circuit_breaker.py  cli.py  config.py  database.py  db.py  events.py  llama_swap_config.py  llamacpp_client.py  mixins.py  model_config.py  morph.py  ollama_client.py  queue.py  resource_manager.py  routes_admin.py  routes_chat.py  routes_queue.py  routes_tts.py  slm_extract.py  slm_import.py  slm_merge.py  slm_rules.py  tools.py  userdb.py  utils.py  validators.py
app/routes/: __init__.py  admin.py  auth.py  backups.py  chat.py  debug.py  documents.py  events.py  messages.py  queue.py  sessions.py  tts.py
app/tasks/: __init__.py  dry_load.py  health_monitor.py
app/templates/: admin.html  base.html  chat.html  login.html
app/translations/: backups.py
docs/: ARCHITECTURE.md  LOCALIZATION.md  RELEASE_GUIDE.md  TESTING.md  VRAM_MANAGEMENT.md  openapi.yaml
modules/: __init__.py  audio.py  base.py  cam.py  image.py  multimodal.py  rag.py  sd_cpp.py  search.py  slm.py  tts.py  video.py
prompts/en/: base_text.template  chat.template  create_image.template  create_image_edit.template  create_image_z_image_turbo.template  create_video.template  create_video_from_image.template  image.template  image_text.template  rag.template  reasoning.template  skills.txt  slm_extract.template  slm_merge.template  slm_remember.template
prompts/ru/: base_text.template  chat.template  create_image.template  create_image_edit.template  create_image_z_image_turbo.template  create_video.template  create_video_from_image.template  image.template  image_text.template  rag.template  reasoning.template  skills.txt  slm_extract.template  slm_merge.template  slm_remember.template
searxng/: settings.yml
services/: README.md
services/automatic1111/: .env.example  README.md  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_admin_routes.py  test_audio_module.py  test_backups.py  test_base_module.py  test_cam.py  test_circuit_breaker.py  test_classify_model_fit.py  test_db.py  test_documents_routes.py  test_dry_load.py  test_error_header.py  test_events.py  test_health_monitor.py  test_image_edit.py  test_image_module.py  test_image_streaming.py  test_integration.py  test_llama_swap_config.py  test_llamacpp_client.py  test_model_config.py  test_morph.py  test_multimodal.py  test_queue.py  test_rag_module.py  test_resource_manager.py  test_resource_manager_ltx_unload.py  test_routes.py  test_sd_cpp_module.py  test_search_module.py  test_security.py  test_slm_merge_rules.py  test_slm_module.py  test_slm_rules.py  test_tools.py  test_tts_module.py  test_userdb.py  test_utils.py  (+3 more)
(+78 files in other folders)
